# AI_Assistant

./: .gitignore  README.md  REFACTOR_REPORT.md  fix_again.py  fix_errors.py  index.html  package.json  pnpm-lock.yaml  rewrite.py  tailwind.config.js  tsconfig.json  unocss.config.ts  vite.config.ts
docs/: image-translation-e2e.md  logging-system.md  启动与打包.md  技术栈与开发指南.md  系统输入增强测试用例.md  自动目标语言测试用例.md
docs/superpowers/plans/: 2026-04-07-auto-target-translation.md  2026-04-07-image-ocr-pipeline.md
docs/superpowers/specs/: 2026-04-06-logging-simplification-design.md
scripts/: classify-tauri-artifacts.mjs  run-tauri-dev-windows.ps1  system-input-smoke-notepad.ps1  tauri-before-dev.mjs  test-image-translation-e2e.ps1  test-reset-software-production.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.smoke.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage_paths.rs
src-tauri/src/commands/: mod.rs  ocr.rs  storage.rs  system_input.rs
src-tauri/src/logging/: mod.rs  storage.rs  types.rs
src-tauri/src/system_input/: capture.rs  detector.rs  mod.rs  state.rs  types.rs  writeback.rs
src-tauri/src/system_input/platform/: linux_wayland.rs  linux_x11.rs  macos.rs  mod.rs  windows.rs
src/assets/styles/: main.css
src/components/app/: AppLifecycleController.vue
src/components/common/: PageHeader.vue
src/components/layout/: AppTopbar.vue
src/components/model/: ModelFormModal.vue
src/composables/: useAppTheme.ts  useWindowSurfaceMode.ts
src/constants/: app.ts  languages.ts  logging.ts
src/layouts/: AppLayout.vue
src/pages/: AppSettingsPage.vue  ModelSettingsPage.vue  SettingsLogCenterPage.vue  SettingsWindowPage.vue  SystemInputTargetLanguageOverlayPage.vue  TranslatePage.vue  TranslateResultPage.vue
src/router/: index.ts
src/stores/: appConfig.ts  logCenter.ts  ocr.ts  systemInput.ts  translation.ts
src/stories/: Button.vue
src/test/: setup.ts
src/types/: ai.ts  app.ts  language.ts  log.ts  ocr.ts  systemInput.ts
src/utils/: color.ts  error.ts  headers.ts  i18n.ts  id.ts  theme.ts
tests/: dummy.test.ts
(+74 files in other folders)
