[package]
name = "ai-translation"
version = "0.1.0"
description = "Desktop AI translation powered by Tauri + Vue"
authors = ["Codex"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ai_translation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
arboard = "3"
tauri-plugin-notification = "2"
sys-locale = "0.3"
chrono = { version = "0.4", features = ["clock", "serde"] }
base64 = "0.22"
futures-util = "0.3"
sevenz-rust = "0.6"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
windows = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
